--- a/index.html
+++ b/index.html
@@ -5,9 +5,41 @@
 		<title>COMP4303 Final Project</title>
 		<style>
 			body { margin: 0; }
+		
+		#death-screen {
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: black;
+			opacity: 0;
+			z-index: 1000;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			transition: opacity 2s ease-in;
+			pointer-events: none;
+			}
+
+			#death-screen.show {
+			opacity: 1;
+			pointer-events: auto;
+			}
+
+			#death-text {
+			color: red;
+			font-size: 5em;
+			font-family: sans-serif;
+			}
 		</style>
 	</head>
 	<body>
 		<script type="module" src="/main.js"></script>
+		
+		<!-- Death screen HTML -->
+		<div id="death-screen">
+    		<h1 id="death-text">YOU DIED</h1>	
 	</body>
 </html>
+
