--- a/index.html
+++ b/index.html
@@ -32,6 +32,43 @@
 			font-size: 5em;
 			font-family: sans-serif;
 			}
+
+			#win-screen {
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: black;
+			opacity: 0;
+			z-index: 1000;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			transition: opacity 2s ease-in;
+			pointer-events: none;
+			}
+
+			#win-screen.show {
+			opacity: 1;
+			pointer-events: auto;
+			}
+
+			#win-text {
+			color: red;
+			text-align: center;
+			font-family: sans-serif;
+			}
+
+			#win-text h1 {
+			font-size: 4em;
+			margin: 0;
+			}
+
+			#win-text h2 {
+			font-size: 2.5em;
+			margin: 0;
+			}
 		</style>
 	</head>
 	<body>
@@ -39,7 +76,17 @@
 		
 		<!-- Death screen HTML -->
 		<div id="death-screen">
-    		<h1 id="death-text">YOU DIED</h1>	
+    		<h1 id="death-text">YOU DIED</h1>
+		</div>
+
+		<!-- Win Screen HTML -->
+		<div id="win-screen">
+			<div id="win-text">
+			  <h1>You defeated the evil summoner!</h1>
+			  <h2>Congratulations!</h2>
+			</div>
+		  </div>
+
 	</body>
 </html>
 
